resources/frontend/sass/themes/_post-card.scss
.post-card {
  $this: &;

  display: block;
  margin: 0 auto;
  width: 100%;
  max-width: 100%;

  border-bottom: 1px solid palette("alto");

  @include media-over(lg) {
    max-width: 28rem;
  }

  &__info {
    padding: 0 1.5rem;
  }

  &--simple,
  &--elevation {
    padding-bottom: 2rem !important;
    background-color: palette("white");

    #{$this}__meta,
    #{$this}__title {
      padding: 0 1rem;
    }
  }

  &--most-viewed__mobile {
    display: flex;
    justify-content: flex-end;
    background-color: palette("white");
    position: relative;
    margin-bottom: 1rem;

    #{$this}__thumbnail {
      max-width: 40%;
      height: 100%;
      margin-bottom: 0;
      position: absolute;
      left: 0;

      #{$this}__img {
        height: 100%;
        object-fit: cover;
        object-position: 50% 0;
      }
    }

    #{$this}__info {
      max-width: 60%;
      padding: 1.5rem;
    }
  }

  &--simple {

    @include media-under(lg) {
      display: flex;
      align-items: center;
      background-color: transparent;
      padding: 2rem 0 !important;

      #{$this}__thumbnail {
        max-width: 126px;
        height: 10rem;
        margin-bottom: 0;

        a img {
          width: 100%;
          height: 10rem;
        }
      }

      #{$this}__title {
        color: palette('white');
      }
      .post-meta__category span {
        color: palette('crimson');
      }
    }

    @include media-over(md) {

      &__max-height {
        height: 100%;
      }
    }
  }

  &--elevation {
    border: 1px solid #f5f5f6;
    box-shadow: 0 5px 10px -5px rgba(204, 204, 204, 0.5);
  }

  &--half {
    max-width: 100%;

    @include media-over(lg) {
      max-width: 58rem;
    }
  }

  &--third {
    max-width: 38rem;

    @include media-under(lg) {
      display: flex;
      align-items: center;
      padding: 1.5rem 0;

      #{$this}__thumbnail {
        margin-bottom: 0;

        &--third {
          max-width: 10rem;
          height: 10rem;
          margin-right: 1.5rem;

          a img {
            height: 10rem;
          }
        }
      }
    }
  }

  &--fourth {
    max-width: 35rem;

    @include media-over(md) {
      max-width: 28rem;
    }
  }

  &--interest {
    margin-bottom: 3rem;
  }

  &--wide {
    display: flex;
    max-width: 100%;

    &__with-padding {
      padding: 2rem 0;
      // border-bottom: unset;

      @include media-under(md) {
        padding-bottom: .5rem;

        #{$this}__thumbnail {
          height: 105px;
          width: 175px !important;
          max-width: 100%;

          a img {
            height: 100%;
          }
        }

        @include media-under(md) {
          #{$this}__info {
            padding-left: 5px;
          }
        }
      }
    }

    @include media-over(md) {
      flex-flow: row nowrap;
      // max-width: 80rem;
    }

    #{$this}__thumbnail,
    #{$this}__info {
      padding: 0;
      width: 100%;
    }

    #{$this}__thumbnail-square {
      flex: 0 0 10rem;
      margin-right: 15px;
      margin-top: .5rem;
      height: 10rem;
      width: 10rem;

      a img {
        height: 10rem;
      }
    }
    
    #{$this}__img {
      height: auto;
      width: 100%;
      max-width: 90%;
    }

    @include media-over(md) {
      #{$this}__img {
        max-width: 100%;
        height: 100%;
      }

      #{$this}__thumbnail {
        flex: 0 0 16.6rem;
        margin-right: 2rem;
        margin-bottom: 0;
        height: 10rem;
        width: 16.6rem;
      }

      #{$this}__large {
        flex: 1 1 1%;
        width: auto;
      }
    }

    &:last-child {
      margin-bottom: 2rem !important;
      border-bottom: 1px solid palette("alto") !important;

      @include media-under(md) {
        border-bottom: none !important;
      }
    }
  }

  &--highlight {
    padding-bottom: 0;
    max-width: 100%;

    @include media-over(lg) {
      margin-bottom: 2rem;
      max-width: 55rem;
      text-align: center;

      #{$this}__thumbnail,
      #{$this}__title {
        margin-bottom: 2rem;
      }
    }

    @media screen and (min-width: 1600px){
      max-width: 90%;

      #{$this}__thumbnail--large {
        width: 100% !important;
      }
    }
  }

  &--video-highlight {
    max-width: 35rem;
    margin: 0 auto;
    border-bottom: 0;

    @include media-over(lg) {
      max-width: 72.2rem;
      // margin-top: 2rem;
    }
  }

  &--photo {
    margin-bottom: 2.5rem;
  }

  &--video {
    max-width: 100%;
    border-bottom: none;
    margin-bottom: 2.5rem;

    @include media-under(md) {
      border: 1px solid palette('athens');
      padding: 0 0 2rem;

      &:last-child {
        border-bottom: 1px solid palette('athens') !important;
      }

      #{$this}__meta,
      #{$this}__title {
        padding: 0 15px;
      }

      #{$this}__title {
        font-size: 16px;
      }
    }

    @include media-over(md) {
      max-width: 30rem;
    }
  }

  &--video-horizontal {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    padding-bottom: 0;
    max-width: 35rem;
    margin-bottom: 1.5rem;

    border: 1px solid #f5f5f6;
    background-color: palette("white");
    box-shadow: 0 5px 10px -5px rgba(204, 204, 204, 0.5);

    @include media-over(md) {
      flex-flow: row nowrap;
      max-width: 43.8rem;

      .post-card__additional {
        margin-bottom: 0;
      }
    }

    @include media-under(lg) {
      #{$this}__thumbnail {
        margin-bottom: 0;
      }
    }

    #{$this}__info {
      padding: 1rem;
    }
  }

  &,
  &:hover {
    text-decoration: none;
  }

  &:last-child {
    border-bottom: 0;
  }

  // for video
  &__vid-play,
  &__frame {
    @include center-align(absolute);
    z-index: 2;
  }

  &__overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.4);
  }

  &__time {
    position: absolute;
    left: 1.5rem;
    bottom: 1.5rem;

    font-family: $info-font-family;
    font-size: 1.2rem;
    font-weight: bold;
    color: palette("white");

    &--large {
      left: 3.5rem;
      bottom: 3.5rem;
      font-weight: 600;
      font-size: 1.4rem;
    }
  }

  &__meta {
    // margin-bottom: .5rem;
    @include font-size(1.4rem);
  }

  &__thumbnail {
    position: relative;
    margin-bottom: 1.4rem;
  }

  &__img {
    display: block;
    object-fit: cover;
    object-position: 50% 50%;
    height: auto;
  }

  &__thumbnail,
  &__img {
    height: auto;
    width: 100%;
    max-width: 100%;

    @include media-over(lg) {
      height: 16.8rem;

      &--interest {
        height: 20rem;
        width: 38rem;
      }

      &--large {
        height: 34.8rem;
        width: 58rem;

        @media screen and (min-width: 1600px) {
          width: 100%;
        }
      }

      &--video {
        height: 18rem;
        width: 30rem;
      }

      &--video-horizontal {
        max-width: 22rem;
        height: 13.2rem;
        width: 22rem;
        margin-bottom: 0;
      }

      &--half {
        height: 29rem;
        width: 58rem;
      }

      &--third {
        height: 22.9rem;
        width: 38rem;
      }

      &--fourth {
        height: 16.8rem;
        width: 28rem;
      }

      &--video-highlight {
        height: 43.7rem;
        width: 72.2rem;
      }
    }
  }

  &__title {
    font-size: 16px;
    font-family: $title-font-family;
    color: palette("black");
    line-height: 24px;
    font-weight: bold;

    &--horizontal {
      font-weight: 600;
      font-size: 16px;
    }

    &--medium {
     font-size: 18px;
    }

    &--large {
      font-size: 16px;

      @include media-over(md) {
        font-size: 22px;
      }
    }

    &--xlarge {
      font-size: 21px;
      line-height: 24px;

      @include media-over(md) {
        font-size: 32px;
        line-height: 38px;
      }
    }
  }

  &__excerpt {
    margin-top: 1.8rem;
    color: palette("tundora");
    font-size: 16px;

    &--interest {
      margin-top: 1rem;
      padding-left: 0;

      @include media-over(lg) {
        padding-left: 3.5rem;
      }
    }
  }

  &__additional {
    margin-top: 10px;
    margin-bottom: 30px;

    &--x-padding {
      padding: 0 1rem;
    }
  }

  &__slide-count {
    display: flex;
    flex-flow: row nowrap;
    position: absolute;
    bottom: 1.5rem;
    left: 1.5rem;

    &-icon {
      height: 16px;
      width: 16px;
    }

    &-amount {
      margin-left: 0.5rem;
      color: palette("white");
      font-size: 1.2rem;
      font-weight: 600;
    }
  }

  &__info {
    // padding: 0 2rem;
  }

  &__interest {
    &-checkbox {
      font-size: 16px;
      margin: 0 1.5rem;

      @include media-over(md) {
        padding-bottom: 2rem;
      }
    }

    &-title {
      padding-left: 1rem;
      font-family: $title-font-family;
      font-weight: 600 !important;
      text-transform: uppercase;
      color: palette("black");
    }

    .pretty .state label:before {
      border-width: 2px;
      border-radius: 3px;
    }
  }
}

.post-meta {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  width: 100%;

  &--centered {
    justify-content: flex-start;

    &-article {
      justify-content: center;
    }

    @include media-over(md) {
      justify-content: center;
    }
  }

  &__category {
    flex: 0 0 auto;
    position: relative;
    margin-right: 1.2rem;
    // margin-left: 0.5rem;

    span {
      position: relative;
      display: inline-block;
      // padding: 0 .5rem;
      z-index: 2;

      color: palette("crimson");
      font-weight: bold;
      font-size: 14px;
      text-transform: uppercase;

      /* &:hover {
        color: rgba(palette("black"), .7) !important;
      } */
    }

    /* &::after {
      content: "";
      position: absolute;
      bottom: 3px;
      left: 0;
      z-index: 1;
      height: 4px;
      width: 100%;
      background-color: palette("crimson");
      transform: skew(-25deg);
    } */
  }

  &__info {
    display: flex;
  }

  &__stat {
    color: palette("nobel");
    font-size: 1.4rem;
    flex: 0 0 auto;
    padding: 5px 0 10px;

    &::after {
      content: "|";
      padding: 0 0.5rem;
    }

    &:last-child::after {
      content: "";
      padding: 0;
    }
  }
}

